<resources>
    <string name="app_name">TaxiPool</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string-array name="hours">
        <item>Hour</item>
        <item>0:00</item>
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string-array name="num_of_passengers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="relative_time">
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
    </string-array>
    <string-array name="gender">
        <item>N/A</item>
        <item>M</item>
        <item>F</item>
    </string-array>
    <string name="searching_text">Looking for a match…</string>
    <string name="title_activity_showuseractivity">Map</string>
    <string name="facebook_app_id">1996581547291394</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1996581547291394</string>
    <string name="home_check_box_text">Save destination as home</string>
    <string name="leave_in">Leaving in:</string>
    <string name="group_size">How many are we:</string>
    <string name="curr_location">Your current location</string>
    <string name="destination">Enter destination</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_testdirections">DIRECTIONS</string>
    <string name="match_found_text">We found you a match!</string>
    <string name="destination_text">Destination:</string>
    <string name="origin_text">Origin:</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="guide_head">Introducing the action buttons:</string>
    <string name="got_it">Got it!</string>
    <string name="guide_navigation">Start navigation \nto the group\'s \nmeeting point</string>
    <string name="guide_chat">Use this to chat and \nconnect with other \ngroup members</string>
    <string name="guide_go">All done!\nStart riding \ntogether!</string>
    <string name="guide_view">Toggle map view:\n  1.Meeting point\n  2.Driving route</string>
    <string name="search_buddy">Finding more...</string>

</resources>
