<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!-- This LinearLayout represents the contents of the screen  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- The ActionBar displayed at the top -->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- The main content view where fragments are loaded -->

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.googleworkshop.taxipool.MatchScreenActivity">

            <TextView
                android:id="@+id/guideHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/guide_head"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideHead">


                <android.support.constraint.ConstraintLayout
                    android:id="@+id/frame_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/gotItButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/button_round_rect"
                        android:onClick="gotoMatch"
                        android:text="@string/got_it"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/srcButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="srcCamera"
                        android:tint="@android:color/white"
                        android:tooltipText="Navigate to meeting point"
                        android:visibility="gone"
                        app:backgroundTint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_my_location_black_24dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/guideDestButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:clickable="true"
                        android:onClick="destCamera"
                        android:tint="@android:color/white"
                        android:tooltipText="Navigate to meeting point"
                        app:backgroundTint="@color/colorPrimary"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_person_pin_circle_black_24dp" />

                    <TextView
                        android:id="@+id/guideView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/guide_view"
                        android:textColor="@android:color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/guideDestButton" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/guideGoButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="16dp"
                        android:clickable="true"
                        android:onClick="closeGroup"
                        android:tint="@android:color/white"
                        app:backgroundTint="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:srcCompat="@drawable/ic_local_taxi_black_24dp" />

                    <TextView
                        android:id="@+id/guideGo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/guide_go"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toTopOf="@+id/guideGoButton"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/guideChatButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:clickable="true"
                        android:onClick="goToChat"
                        android:tint="@android:color/white"
                        android:tooltipText="Chat with group"
                        app:backgroundTint="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:srcCompat="@drawable/ic_chat_black_24dp" />

                    <TextView
                        android:id="@+id/guideChat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/guide_chat"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toTopOf="@+id/guideChatButton"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/guideNavigateButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:clickable="true"
                        android:onClick="openNavigation"
                        android:tint="@android:color/white"
                        android:tooltipText="Navigate to meeting point"
                        app:backgroundTint="@color/colorPrimary"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_navigation_black_24dp" />

                    <TextView
                        android:id="@+id/guideNavigate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/guide_navigation"
                        android:textColor="@android:color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/guideNavigateButton" />

                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <FrameLayout
            android:id="@+id/flContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>

    <!-- The navigation drawer that comes from the left -->
    <!-- Note that `android:layout_gravity` needs to be set to 'start' -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view"
        app:theme="@style/NavigationViewStyle" />
</android.support.v4.widget.DrawerLayout>

